[gd_scene load_steps=2 format=2]

[ext_resource path="res://chat_app.gd" type="Script" id=1]

[node name="chat_app" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="chat_panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="chat_panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="chat_panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="read_text" type="RichTextLabel" parent="chat_panel/VBoxContainer/HBoxContainer2"]
margin_right = 784.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="chatter_list" type="ItemList" parent="chat_panel/VBoxContainer/HBoxContainer2"]
margin_left = 788.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="HBoxContainer" type="HBoxContainer" parent="chat_panel/VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="send_text" type="LineEdit" parent="chat_panel/VBoxContainer/HBoxContainer"]
margin_right = 849.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="send_button" type="Button" parent="chat_panel/VBoxContainer/HBoxContainer"]
margin_left = 853.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Send"

[node name="connect_dialog" type="PopupDialog" parent="chat_panel"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0
margin_bottom = 120.0
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="chat_panel/connect_dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="chat_panel/connect_dialog/MarginContainer"]
margin_right = 380.0
margin_bottom = 220.0

[node name="title_label" type="Label" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Host or join"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 18.0
margin_right = 380.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( -165, 23 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 380.0
margin_bottom = 119.0

[node name="host_address_label" type="Label" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
text = "Host address:"

[node name="address_edit" type="LineEdit" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 211.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="name_label" type="Label" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 215.0
margin_top = 5.0
margin_right = 257.0
margin_bottom = 19.0
text = "Name:"

[node name="name_edit" type="LineEdit" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 261.0
margin_right = 380.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 123.0
margin_right = 380.0
margin_bottom = 196.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 380.0
margin_bottom = 220.0

[node name="CenterContainer" type="CenterContainer" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="host_button" type="Button" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer"]
margin_left = 73.0
margin_right = 115.0
margin_bottom = 20.0
text = "Host"

[node name="CenterContainer2" type="CenterContainer" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="join_button" type="Button" parent="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer2"]
margin_left = 76.0
margin_right = 111.0
margin_bottom = 20.0
disabled = true
text = "Join"

[connection signal="text_entered" from="chat_panel/VBoxContainer/HBoxContainer/send_text" to="." method="_on_send_text_text_entered"]
[connection signal="pressed" from="chat_panel/VBoxContainer/HBoxContainer/send_button" to="." method="_on_send_button_pressed"]
[connection signal="text_changed" from="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer/name_edit" to="." method="_on_name_edit_text_changed"]
[connection signal="pressed" from="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="chat_panel/connect_dialog/MarginContainer/VBoxContainer/HBoxContainer2/CenterContainer2/join_button" to="." method="_on_join_button_pressed"]
